fix(table): Alignment for content in a table
- Align pre and suffix icons for text fields in table

#BQ-5601

--- a/src/app/modules/list/table.component.scss
+++ b/src/app/modules/list/table.component.scss
@@ -46,6 +46,7 @@
     display: flex;
     border-top: 0;
     background-color: mat-color($bq-mat-grey-light, A100);
+    align-items: center;
 
     .mat-form-field-prefix {
       margin: 0 2px 0 $bq-margin-half;
